project5-fixed z-index, start main

--- a/project5-innovative/css/style.css
+++ b/project5-innovative/css/style.css
@@ -2,35 +2,26 @@ body {
   background-image: url(../img/bg.jpg);
 }
 
-.clearfix:after {
-  content "";
-  display: block;
-  clear: both;
-}
 /* logo */
-
 .logo {
   margin-left: 150px;
   margin-top: 45px;
 }
 
 /* nagication-top */
-
-.nav {
+nav {
   width: 1100px;
   height: 40px;
   margin-top: 35px;
   border-radius: 20px 20px 0 0;
   background-color: #2fa5c3;
   background: linear-gradient(to bottom, #33acca, #2897b3);
-  box-shadow: 0px 1px 8px 0px rgba(0,0,0,1);
+  box-shadow: 0px 1px 8px 0px black;
 }
-
-.nav ul {
+nav ul {
   margin-left: 20px;
 }
-
-.nav li {
+nav ul li {
   float: left;
   width: 100px;
   padding: 12px;
@@ -38,26 +29,20 @@ body {
   font-size: 16px;
   font-weight: lighter;
 }
-
-.nav li a {
+nav ul li:hover {
+  border-bottom: 1px solid white;
+  background-color: #18778e;
+}
+nav ul li a {
   display: block;
   position: relative;
   color: white;
   text-decoration: none;
 }
 
-.nav li:hover {
-  border-bottom: 1px solid white;
-  background-color: #18778e;
-}
-
 /* Header */
-
-.wrapper {
-  position: relative;
-}
-
 .header {
+  position: relative;
   width: 1100px;
   height: 250px;
   margin-left: 100px;
@@ -82,19 +67,24 @@ body {
 }
 
 .box {
+  position: absolute;
+  top: 0px;
+  left: 5px;
+  width: 1131px;
   height: 200px;
   margin: 160px 80px 0px 80px;
   background-color: white;
   border-radius: 20px 20px 0 0;
   z-index: 1;
 }
-/* slider */
 
+/* slider */
 .slider {
   display: inline-block;
   width: 100%;
   height: 165px;
   background: linear-gradient(to bottom, #ededed, #d1d1d1);
+  box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.75);
 }
 
 .arrow {
@@ -135,9 +125,39 @@ body {
   color: grey;
 }
 
-/*
-.slider-item-wrapper {
-  height: 165px;
-  box-shadow: 0 15px 15px  -15px #333 ,  0 -15px 15px  -15px #333;
+.content {
+  display: flex;
+  margin-top: 25px;
+  margin-left: 35px;
+  margin-right: 35px;
+  background-color: white;
+  color: #919191;
+  line-height: 18px;
 }
-*/
+.content > :first-child {
+  width: 260px;
+  margin-top: 35px;
+  margin-left: 40px;
+}
+.content > :first-child article {
+  margin-top: 20px;
+}
+.content > :first-child article h3 {
+  color: #2d9db8;
+}
+.content > :first-child article p {
+  width: 230px;
+  font-size: 14px;
+}
+.content > :first-child article button {
+  float: right;
+  width: 88px;
+  height: 23px;
+  margin-top: 15px;
+  border: none;
+  border-radius: 10px;
+  background: linear-gradient(to bottom, #919191, #0d0d0d);
+  color: white;
+}
+
+/*# sourceMappingURL=style.css.map */
